--- a/PhoneApp/MainPage.xaml
+++ b/PhoneApp/MainPage.xaml
@@ -5,7 +5,7 @@
 
     <VerticalStackLayout Spacing="15"  Padding="20">
         <Label Text="Enter A Phoneword" FontSize="20" />
-        <Entry x:Name="PhoneNumberText" Text="1-555-NETMAUI" />
+        <Entry x:Name="PhoneNumberText" Text="1-555-NETMAUI02" />
         <Button x:Name="TranslateButton" Text="Translate" Clicked="OnTranslate" />
         <Button x:Name="CallButton" Text="Call" Clicked="OnCall" />
     </VerticalStackLayout>
