--- a/PhoneApp/MainPage.xaml
+++ b/PhoneApp/MainPage.xaml
@@ -8,6 +8,14 @@
         <Entry x:Name="PhoneNumberText" Text="1-555-NETMAUI02" />
         <Button x:Name="TranslateButton" Text="Translate" Clicked="OnTranslate" />
         <Button x:Name="CallButton" Text="Call" Clicked="OnCall" />
+        
+        <!-- Prfefefrences -->
+        <Label Text="Saving Preferences Locally" />
+        <Entry x:Name="txtName" WidthRequest="150" HorizontalOptions="Center" />
+        <Label x:Name="lblDateTime" HorizontalOptions="Center" />
+        <Button x:Name="btnReg" Text="Register" Clicked="RegisterClicked" HorizontalOptions="Center"/>
+        <Button x:Name="btnLogout" Text="Logout" Clicked="LogoutClicked" HorizontalOptions="Center" />
+
     </VerticalStackLayout>
 
 </ContentPage>
